search done and added search items

--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Product Page</title>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+			rel="stylesheet"
+		/>
+
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
-	<body></body>
+	<body>
+		<nav class="nav">
+			<div class="nav__left">
+				<div class="nav__search search">
+					<i class="fas fa-search search__icon"
+						><input
+							type="search"
+							class="nav__search search__input"
+							placeholder="Search"
+					/></i>
+				</div>
+				<div class="nav__options">
+					<span class="nav__options-item shop">Shop</span>
+					<span class="nav__options-item catagories">Catagories</span>
+					<span class="nav__options-item">Sale</span>
+				</div>
+			</div>
+			<div class="nav__logo"></div>
+			<div class="nav__right"></div>
+		</nav>
+	</body>
 </html>
