--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
 				</div>
 				<div class="nav__options">
 					<span class="nav__options-item shop">Shop</span>
-					<span class="nav__options-item catagories">Catagories</span>
-					<span class="nav__options-item">Sale</span>
+					<span class="nav__options-item catagories">
+						<i class="fas fa-caret-right"></i> Categories</span
+					>
+					<span class="nav__options-item sale">Sale</span>
 				</div>
 			</div>
-			<div class="nav__logo"></div>
-			<div class="nav__right"></div>
+			<div class="nav__logo">
+				<span>B Z<br />B .</span>
+			</div>
+			<div class="nav__right">
+				<span>$USD <i class="fas fa-chevron-down"></i></span>
+				<span>My Account</span>
+				<span>My Bag</span>
+			</div>
 		</nav>
 	</body>
 </html>
