card structure made

--- a/index.html
+++ b/index.html
@@ -39,5 +39,15 @@
 				<span>My Bag</span>
 			</div>
 		</nav>
+		<hr />
+		<div class="cards">
+			<div class="card">
+				<img src="./imgs/Tent1.jpeg" class="card__image" />
+				<h3 class="card__mfg">REI Co-op</h3>
+				<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+				<span class="card__price">$199</span>
+				<button class="card__button">Compare</button>
+			</div>
+		</div>
 	</body>
 </html>
