start grid layout

--- a/index.html
+++ b/index.html
@@ -40,14 +40,81 @@
 			</div>
 		</nav>
 		<hr />
-		<div class="cards">
-			<div class="card">
-				<img src="./imgs/Tent1.jpeg" class="card__image" />
-				<h3 class="card__mfg">REI Co-op</h3>
-				<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
-				<span class="card__price">$199</span>
-				<button class="card__button">Compare</button>
-			</div>
+		<div class="sections">
+			<section class="left"></section>
+			<section class="cards">
+				<div class="card">
+					<img src="./imgs/Tent1.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent2.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent3.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent4.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent5.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent6.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent7.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent8.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+
+				<div class="card">
+					<img src="./imgs/Tent9.jpeg" class="card__image" />
+					<h3 class="card__mfg">REI Co-op</h3>
+					<h4 class="card__name">Trait Hut 2 Tent with Footprint</h4>
+					<span class="card__price">$199.00</span>
+					<button class="card__button">Compare</button>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
