progress on menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
 			rel="stylesheet"
 		/>
-
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
@@ -41,7 +40,12 @@
 		</nav>
 		<hr />
 		<div class="sections">
-			<section class="left"></section>
+			<section class="left">
+				<h2 class="tents">Tents <i class="fas fa-plus"></i></h2>
+				<h3 class="tents__backpacking">
+					Backpacking Tents <i class="fas fa-minus"></i>
+				</h3>
+			</section>
 			<section class="cards">
 				<div class="card">
 					<img src="./imgs/Tent1.jpeg" class="card__image" />
